@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2007-02-14"
+.TH VOIKKOSPELL 1 "2007-07-08"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -74,6 +74,9 @@ as the minimun length for words to hyphenate.
 as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
 .TP
 .BI ignore_dot= n
+.TP
+.BI ignore_numbers= n
+(voikkospell)
 .TP
 .BI accept_first_uppercase= n
 (voikkospell)
