@@ -117,9 +117,6 @@ int main(int argc, char ** argv) {
 	setlocale(LC_ALL, "");
 	encoding = nl_langinfo(CODESET);
 	
-	voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_DOT, 0);
-	voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_NUMBERS, 1);
-	voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_UPPERCASE, 0);
 	voikko_set_string_option(handle, VOIKKO_OPT_ENCODING, encoding);
 	
 	for (i = 1; i < argc; i++) {
@@ -128,6 +125,10 @@ int main(int argc, char ** argv) {
 			voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_DOT, 1);
 		else if (strcmp(argv[i], "ignore_dot=0") == 0)
 			voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_DOT, 0);
+		else if (strcmp(argv[i], "ignore_numbers=1") == 0)
+			voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_NUMBERS, 1);
+		else if (strcmp(argv[i], "ignore_numbers=0") == 0)
+			voikko_set_bool_option(handle, VOIKKO_OPT_IGNORE_NUMBERS, 0);
 		else if (strcmp(argv[i], "accept_first_uppercase=1") == 0)
 			voikko_set_bool_option(handle, VOIKKO_OPT_ACCEPT_FIRST_UPPERCASE, 1);
 		else if (strcmp(argv[i], "accept_first_uppercase=0") == 0)
