@@ -1,3 +1,8 @@
+2007-07-08 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add option ignore_numbers=n to voikkospell. Change
+	  default from 1 to 0 (the library default).
+
 2007-06-19 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add exported functions for freeing the memory
